Change from T5 to XGBoost for data fitting

--- a/secops/secops-predictions.ipynb
+++ b/secops/secops-predictions.ipynb
@@ -30,33 +30,13 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, Seq2SeqTrainer, Seq2SeqTrainingArguments, T5Tokenizer, T5ForConditionalGeneration\n",
-    "import torch\n",
-    "import os\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
+    "import xgboost as xgb\n",
     "import matplotlib.pyplot as plt\n",
-    "from peft import get_peft_model, LoraConfig, TaskType\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "import seaborn as sns\n",
+    "import onnxmltools\n",
+    "from skl2onnx.common.data_types import FloatTensorType\n",
     "\n",
-    "# Check if any accelerator is available \n",
-    "# If you are reading this and about to buy a GPU, please buy an NVIDIA GPU as all AI frameworks are optimized for NVIDIA GPUs,\n",
-    "# and you will have a better experience with NVIDIA GPUs.\n",
-    "fp16 = False\n",
-    "if torch.cuda.is_available():\n",
-    "    os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
-    "    device = torch.device(\"cuda\")\n",
-    "    torch.cuda.empty_cache()\n",
-    "    max_memory_mb = 8 * 1024\n",
-    "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = f'max_split_size_mb:{max_memory_mb}'\n",
-    "    fp16 = True\n",
-    "# Check if MPS (Apple Silicon GPU) is available\n",
-    "elif torch.backends.mps.is_available():\n",
-    "    os.environ[\"PYTORCH_MPS_HIGH_WATERMARK_RATIO\"] = \"0.0\"\n",
-    "    os.environ[\"PYTORCH_ENABLE_MPS_FALLBACK\"] = \"1\"\n",
-    "    device = torch.device(\"mps\")\n",
-    "else:\n",
-    "    device = torch.device(\"cpu\")\n",
     "\n",
     "# Load the data\n",
     "# why did we use parquet format? Cos we love to complicate stuff. Just kidding. \n",
@@ -77,18 +57,11 @@
     "data = preprocess_data(data)\n",
     "\n",
     "# Define features and target\n",
-    "# Our target (ie do prediction that we will, says Yoda) is the Risk Score column\n",
     "X = data.drop(columns=['Risk Score'])\n",
     "y = data['Risk Score']\n",
     "\n",
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Convert data to string format for T5, Liquid Metal lol\n",
-    "X_train = X_train.astype(str)\n",
-    "X_test = X_test.astype(str)\n",
-    "y_train = y_train.astype(str)\n",
-    "y_test = y_test.astype(str)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
    ]
   },
   {
@@ -97,36 +70,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class T5RegressionDataset(Dataset):\n",
-    "    def __init__(self, inputs, targets, tokenizer, max_len=32):\n",
-    "        self.inputs = inputs\n",
-    "        self.targets = targets\n",
-    "        self.tokenizer = tokenizer\n",
-    "        self.max_len = max_len\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.inputs)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        input_text = str(self.inputs[idx])\n",
-    "        target_text = str(self.targets[idx])\n",
-    "        input_encoding = self.tokenizer(\n",
-    "            input_text, max_length=self.max_len, padding='max_length', truncation=True, return_tensors=\"pt\"\n",
-    "        )\n",
-    "        target_encoding = self.tokenizer(\n",
-    "            target_text, max_length=self.max_len, padding='max_length', truncation=True, return_tensors=\"pt\"\n",
-    "        )\n",
-    "        return {\n",
-    "            'input_ids': input_encoding['input_ids'].flatten(),\n",
-    "            'attention_mask': input_encoding['attention_mask'].flatten(),\n",
-    "            'labels': target_encoding['input_ids'].flatten()\n",
-    "        }\n",
-    "\n",
-    "# Tokenize the data\n",
-    "tokenizer = T5Tokenizer.from_pretrained('t5-small', legacy=False)\n",
-    "\n",
-    "train_dataset = T5RegressionDataset(X_train.values.tolist(), y_train.values.tolist(), tokenizer)\n",
-    "test_dataset = T5RegressionDataset(X_test.values.tolist(), y_test.values.tolist(), tokenizer)"
+    "# Standardize the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
@@ -135,62 +82,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the model and training arguments\n",
-    "# we started with BART then BERT both which performed poorly and we found ourselves back to gracious arms of BigG's T5\n",
-    "# Well for Fatih E. NAR BigG is the place where he had good times.\n",
-    "model = T5ForConditionalGeneration.from_pretrained('t5-small').to(device)\n",
-    "\n",
-    "# Define PEFT/LoRA configuration\n",
-    "lora_config = LoraConfig(\n",
-    "    task_type=TaskType.SEQ_2_SEQ_LM,\n",
-    "    inference_mode=False,\n",
-    "    r=4, # it was 4\n",
-    "    lora_alpha=16, # it was 16\n",
-    "    lora_dropout=0.1, # it was 0.1\n",
-    "    target_modules=['q', 'v', 'k', 'o']\n",
+    "# Train the XGBoost model with GPU support\n",
+    "xgb_model = xgb.XGBRegressor(\n",
+    "    objective='reg:squarederror', \n",
+    "    n_estimators=100, \n",
+    "    learning_rate=0.1, \n",
+    "    max_depth=6, \n",
+    "    #tree_method='gpu_hist'  # Use GPU for training if you have NVIDIA\n",
+    "    tree_method='hist'  # Use histogram-based algorithm for CPU\n",
     ")\n",
-    "model = get_peft_model(model, lora_config)\n",
-    "model.to(device)  # Language modeling head to GPU \n",
-    "\n",
-    "# If you GPU sucks you can reduce the epock count to 1 , \n",
-    "# at that level which your loss rate shoud be around 0.05 already\n",
-    "# if not you can increase the epoch count to higher.\n",
-    "# if your GPU memory is also limited and endding with OOM error, you can reduce the batch size to 2 or 1\n",
-    "training_args = Seq2SeqTrainingArguments(\n",
-    "    output_dir=\"./results\",\n",
-    "    num_train_epochs=100,\n",
-    "    per_device_train_batch_size=512,\n",
-    "    gradient_accumulation_steps=64,  # Accumulate gradients over multiple steps\n",
-    "    per_device_eval_batch_size=512,\n",
-    "    learning_rate=3e-5,\n",
-    "    logging_dir='./logs',\n",
-    "    save_total_limit=10,\n",
-    "    eval_strategy=\"steps\",  # Evaluate during training at each `logging_steps`\n",
-    "    logging_steps=100,  # Log every 500 steps\n",
-    "    eval_steps=100,  # Evaluate every 2000 steps\n",
-    "    load_best_model_at_end=True,  # Load the best model at the end of training\n",
-    "    metric_for_best_model=\"loss\",  # Use loss to evaluate the best model\n",
-    "    predict_with_generate=True,\n",
-    "    fp16=fp16, # Mixed precision training only for CUDA\n",
-    ")\n",
-    "\n",
-    "trainer = Seq2SeqTrainer(\n",
-    "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=train_dataset,\n",
-    "    eval_dataset=test_dataset,\n",
-    "    tokenizer=tokenizer\n",
-    ")\n",
-    "\n",
-    "# Train the model\n",
-    "trainer.train()\n",
+    "xgb_model.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict the test set\n",
+    "y_pred = xgb_model.predict(X_test_scaled)\n",
     "\n",
     "# Evaluate the model\n",
-    "eval_results = trainer.evaluate()\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "# Print evaluation results\n",
-    "print(\"Evaluation results:\")\n",
-    "print(eval_results)"
+    "print(f'Mean Squared Error: {mse}')\n",
+    "print(f'Mean Absolute Error: {mae}')\n",
+    "print(f'R^2 Score: {r2}')"
    ]
   },
   {
@@ -199,51 +119,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lets Visualize Our Model Performance\n",
-    "# Function to predict and plot actual vs. predicted risk factors\n",
-    "def predict_and_plot(trainer, test_dataset, y_test):\n",
-    "    # Set generation parameters\n",
-    "    generation_kwargs = {\n",
-    "        \"max_length\": 10,  # Adjust as needed\n",
-    "        \"num_return_sequences\": 1,\n",
-    "        \"num_beams\": 1\n",
-    "    }\n",
+    "# Distribution of residuals\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.histplot(residuals, bins=30, kde=True)\n",
+    "plt.xlabel('Residuals')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Distribution of Residuals')\n",
+    "plt.show()\n",
     "\n",
-    "    # Make predictions\n",
-    "    predictions = trainer.predict(test_dataset, **generation_kwargs)\n",
-    "    predicted_risk_scores = predictions.predictions.squeeze()\n",
+    "# Scatter plot of actual vs. predicted values\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(x=y_test, y=y_pred, alpha=0.5, color='red', label='Predicted Risk Scores')\n",
+    "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'k--', lw=2, label='Actual Risk Scores')\n",
+    "plt.xlabel('Actual Risk Scores')\n",
+    "plt.ylabel('Predicted Risk Scores')\n",
+    "plt.title('Actual vs. Predicted Risk Scores')\n",
+    "plt.legend(loc='upper left')\n",
+    "plt.show()\n",
     "\n",
-    "    # Decode the predictions\n",
-    "    predicted_risk_scores = [tokenizer.decode(ids, skip_special_tokens=True) for ids in predicted_risk_scores]\n",
-    "    print(predicted_risk_scores)\n",
+    "# Feature importance with color gradient and percentage annotations\n",
+    "feature_names = X.columns.tolist()\n",
+    "importance = xgb_model.feature_importances_\n",
+    "importance_dict = {name: score for name, score in zip(feature_names, importance)}\n",
     "\n",
-    "    # Post-process the output to extract numeric values\n",
-    "    def extract_numeric(prediction):\n",
-    "        try:\n",
-    "            # Extract the first numeric value from the string\n",
-    "            return float(''.join(filter(str.isdigit, prediction)) or np.nan)\n",
-    "        except ValueError:\n",
-    "            return np.nan\n",
+    "# Create a color palette\n",
+    "norm = plt.Normalize(min(importance_dict.values()), max(importance_dict.values()))\n",
+    "colors = plt.cm.viridis(norm(list(importance_dict.values())))\n",
     "\n",
-    "    predicted_risk_scores = np.array([extract_numeric(pred) for pred in predicted_risk_scores])\n",
-    "    print(predicted_risk_scores)\n",
-    "    # Handle any non-numeric predictions\n",
-    "    valid_indices = ~np.isnan(predicted_risk_scores)\n",
-    "    predicted_risk_scores = predicted_risk_scores[valid_indices]\n",
-    "    actual_risk_scores = np.array([float(value) for value in y_test])[valid_indices]\n",
-    "    print(actual_risk_scores)\n",
-    "    # Plot actual vs. predicted risk factors\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.scatter(actual_risk_scores, actual_risk_scores, alpha=0.5, color='blue', label='Actual Risk Factors')\n",
-    "    plt.scatter(actual_risk_scores, predicted_risk_scores, alpha=0.5, color='red', label='Predicted Risk Factors')\n",
-    "    plt.xlabel(\"Actual Risk Factors\")\n",
-    "    plt.ylabel(\"Predicted Risk Factors\")\n",
-    "    plt.title(\"Actual vs. Predicted Risk Factors\")\n",
-    "    plt.legend()\n",
-    "    plt.show()\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "sns.barplot(x=list(importance_dict.values()), y=list(importance_dict.keys()), palette=colors)\n",
+    "plt.title('Feature Importance')\n",
+    "plt.xlabel('Importance Score')\n",
+    "plt.ylabel('Features')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
     "\n",
-    "# Predict and plot\n",
-    "predict_and_plot(trainer, test_dataset, y_test)"
+    "# Add percentage annotations\n",
+    "for i, (name, value) in enumerate(importance_dict.items()):\n",
+    "    plt.text(value, i, f'{value * 100:.2f}%', ha='left', va='center')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -252,14 +167,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# As Final Point Lets Save the Model\n",
-    "# Fatih E. NAR You are a genius and very handsome engineer! \n",
-    "# Sometimes good to praise yourself, you know. :-)\n",
-    "model_save_path = 'model/t5_risk_score_model.pth'\n",
-    "torch.save(model.state_dict(), model_save_path)\n",
+    "# Convert the model to ONNX format\n",
+    "initial_type = [('float_input', FloatTensorType([None, X_train.shape[1]]))]\n",
+    "onnx_model = onnxmltools.convert_xgboost(xgb_model, initial_types=initial_type)\n",
     "\n",
-    "# Save the tokenizer\n",
-    "tokenizer.save_pretrained('model/t5_risk_score_tokenizer')"
+    "# Save the ONNX model\n",
+    "onnx_model_path = 'model/xgb_risk_score_model.onnx'\n",
+    "with open(onnx_model_path, 'wb') as f:\n",
+    "    f.write(onnx_model.SerializeToString())\n",
+    "\n",
+    "print(f\"XGBoost model saved to {onnx_model_path}\")"
    ]
   }
  ],
