--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -190,7 +190,7 @@
     "    load_best_model_at_end=True,  # Load the best model at the end of training\n",
     "    metric_for_best_model=\"loss\",  # Use loss to evaluate the best model\n",
     "    predict_with_generate=True,  # Use generation for evaluation\n",
-    "    fp16=False,  # Disable mixed precision training for MPS\n",
+    "    fp16=True,  # Disable mixed precision training for MPS\n",
     ")\n",
     "\n",
     "# Create Trainer instance\n",
