Enabling Multiple GPU Support

--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -45,14 +45,21 @@
     "# Set TOKENIZERS_PARALLELISM to false to avoid warnings\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "gc.collect()\n",
+    "fp16v = False # Set to True to enable mixed precision training\n",
+    "parallel = False # Set to True to enable parallel training\n",
+    "device = None\n",
     "\n",
     "# Check if any accelerator is available \n",
     "if torch.cuda.is_available():\n",
     "    os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
     "    device = torch.device(\"cuda\")\n",
+    "    fp16v = True\n",
     "    torch.cuda.empty_cache()\n",
-    "    max_memory_mb = 8 * 1024\n",
+    "    max_memory_mb = 10 * 1024 # Set the maximum memory to 10GB, Adjust this value based on the GPU memory\n",
     "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = f'max_split_size_mb:{max_memory_mb}'\n",
+    "    if torch.cuda.device_count() > 1:\n",
+    "        parallel = True\n",
+    "        print(\"Using\", torch.cuda.device_count(), \"GPUs\")\n",
     "# Check if MPS (Apple Silicon GPU) is available\n",
     "elif torch.backends.mps.is_available():\n",
     "    os.environ[\"PYTORCH_MPS_HIGH_WATERMARK_RATIO\"] = \"0.0\"\n",
@@ -165,6 +172,9 @@
     "    target_modules=['q', 'v', 'k', 'o']\n",
     ")\n",
     "model = get_peft_model(model, lora_config)\n",
+    "if parallel:\n",
+    "    model = torch.nn.DataParallel(model) # Parallelize the model\n",
+    "    print(\"Parallelized model\")\n",
     "model.to(device)  # Language modeling head to GPU "
    ]
   },
@@ -190,7 +200,8 @@
     "    load_best_model_at_end=True,  # Load the best model at the end of training\n",
     "    metric_for_best_model=\"loss\",  # Use loss to evaluate the best model\n",
     "    predict_with_generate=True,  # Use generation for evaluation\n",
-    "    fp16=True,  # Disable mixed precision training for MPS\n",
+    "    fp16=fp16v,  # Load mixed precision training for CUDA only\n",
+    "    remove_unused_columns=False,  # Remove unused columns from the dataset\n",
     ")\n",
     "\n",
     "# Create Trainer instance\n",
