Import update for DataParallelism and ModelParallelism

--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -37,6 +37,7 @@
     "from datasets import Dataset\n",
     "from transformers import T5ForConditionalGeneration, T5Tokenizer, Trainer, TrainingArguments, get_linear_schedule_with_warmup, Seq2SeqTrainer, Seq2SeqTrainingArguments\n",
     "from peft import get_peft_model, LoraConfig, TaskType\n",
+    "from torch.nn.parallel import DataParallel\n",
     "\n",
     "# Save the model and tokenizer\n",
     "model_save_path = \"models/5gran_faultprediction_model\"\n",
@@ -173,7 +174,7 @@
     ")\n",
     "model = get_peft_model(model, lora_config)\n",
     "if parallel:\n",
-    "    model = torch.nn.DataParallel(model) # Parallelize the model\n",
+    "    model = DataParallel(model) # Parallelize the model\n",
     "    print(\"Parallelized model\")\n",
     "model.to(device)  # Language modeling head to GPU "
    ]
