--- a/smartgrid/anomaly_detection_cnn.ipynb
+++ b/smartgrid/anomaly_detection_cnn.ipynb
@@ -8,7 +8,7 @@
     "# Anomaly Detections in Power Grid\n",
     "## Project Overview\n",
     "Author: Fatih E. NAR<br>\n",
-    "This project aims to deliver an anomaly detection approacg for power grid<br>\n",
+    "This project aims to deliver an anomaly detection approach for power grid<br>\n",
     "Dataset: https://archive.ics.uci.edu/dataset/235/individual+household+electric+power+consumption"
    ]
   },
