--- a/5gnetops/5gran-predictions-v2.ipynb
+++ b/5gnetops/5gran-predictions-v2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5G Network Operations Insights with <br> Fine Tuning of T5-Small (This is the smallest version of T5.) Version-2.0\n",
+    "# 5G Network Operations Insights with <br> Fine Tuning of T5-Base Version-2.0\n",
     "## Project Overview\n",
     "Author: Fatih E. NAR<br>\n",
     "This project aims to deliver a 5g network insight with fine tuning a network performant encoder-decoder TransformerNN<br>\n",
