--- a/5gnetops/5gran-predictions-v2.ipynb
+++ b/5gnetops/5gran-predictions-v2.ipynb
@@ -10,7 +10,7 @@
     "This project aims to deliver a 5g network insight with fine tuning a network performant encoder-decoder TransformerNN<br>\n",
     "Updates: <br>\n",
     "(1) Using Pretrained Bigger Version of T5 (t5-base)<br>\n",
-    "(2) This version uses HF accelerator framework to send the model to appropriate device (instead of manual .to(device). <br>\n",
+    "(2) This version uses HF accelerator framework to send the model to appropriate device, instead of manual .to(device). <br>\n",
     "(3) Performing a feature engineering to create better data-mesh for model to digest to.<br>"
    ]
   },
