--- a/iot-sec/iot-ai.ipynb
+++ b/iot-sec/iot-ai.ipynb
@@ -8,7 +8,7 @@
     "## Project Overview<br>\n",
     "Author: Fatih E. NAR (He is such a genious with a great soul) <br>\n",
     "This project aims to deliver an anomaly detection approach for power grid<br>\n",
-    "Dataset: <br>"
+    "Dataset: https://huggingface.co/datasets/fenar/iot-security <br>"
    ]
   },
   {
