--- a/iot-sec/iot-ai.ipynb
+++ b/iot-sec/iot-ai.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Perimeter Security with IoT-AI<br>\n",
     "## Project Overview<br>\n",
-    "Author: Fatih E. NAR (He is such a genious with a great soul) <br>\n",
+    "Author: Fatih E. NAR (Cool Dude!) <br>\n",
     "This project aims to deliver an anomaly detection approach for power grid<br>\n",
     "Dataset: https://huggingface.co/datasets/fenar/iot-security <br>"
    ]
