--- a/etc/nic-builder.ipynb
+++ b/etc/nic-builder.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "50b9df66",
-   "metadata": {},
-   "source": [
-    "# K8s CNI Config Builder (WIP)\n",
-    "Author: Fatih E. NAR<br>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9407cbed-0595-48d3-bcf8-168d60490785",
@@ -87,7 +78,7 @@
     "train_dataset = ConfigDataset(train_data, tokenizer)\n",
     "val_dataset = ConfigDataset(val_data, tokenizer)\n",
     "\n",
-    "batch_size = 8\n",
+    "batch_size = 9\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size)\n",
     "\n",
@@ -104,8 +95,8 @@
    "source": [
     "model.to(device)\n",
     "\n",
-    "optimizer = AdamW(model.parameters(), lr=2e-5)\n",
-    "num_epochs = 145  # Increased number of epochs\n",
+    "optimizer = AdamW(model.parameters(), lr=3e-5)\n",
+    "num_epochs = 100  # Increased number of epochs\n",
     "num_training_steps = num_epochs * len(train_loader)\n",
     "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=100, num_training_steps=num_training_steps)\n",
     "\n",
@@ -169,9 +160,9 @@
     "        max_length=200,\n",
     "        num_return_sequences=1,\n",
     "        no_repeat_ngram_size=2, \n",
-    "        top_k=50,\n",
+    "        top_k=10,\n",
     "        top_p=0.95,\n",
-    "        temperature=0.01,\n",
+    "        temperature=0.5,\n",
     "        do_sample=True,\n",
     "        pad_token_id=model.config.eos_token_id\n",
     "    )\n",
@@ -182,9 +173,9 @@
     "\n",
     "# Test examples\n",
     "test_inputs = [\n",
-    "    \"Configure the eth3 ethernet device with the static IPv4 address 232.162.200.174/25\",\n",
-    "    \"Set the eth1 ethernet device with the static IPv4 address 192.168.1.1/24\",\n",
-    "    \"Assign the eth2 ethernet device with the IPv4 address 10.0.0.1/8\",\n",
+    "    \"Configure the eth63 bond device with the static IPv4 address 232.162.200.174/25\",\n",
+    "    \"Set the eth81 ethernet device with the static IPv4 address 192.168.1.1/24\",\n",
+    "    \"Assign the eth52 ethernet device with the IPv4 address 10.0.0.1/8\",\n",
     "]\n",
     "\n",
     "for test_input in test_inputs:\n",
@@ -192,6 +183,14 @@
     "    print(f\"Generated YAML:\\n{generate_yaml(test_input)}\")\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41468745-4805-44db-9adc-6a35756880a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
