--- a/secops/secops-predictions.ipynb
+++ b/secops/secops-predictions.ipynb
@@ -146,6 +146,8 @@
     "norm = plt.Normalize(min(importance_dict.values()), max(importance_dict.values()))\n",
     "colors = plt.cm.viridis(norm(list(importance_dict.values())))\n",
     "\n",
+    "# Calculate the residuals\n",
+    "residuals = y_test - y_pred\n",
     "plt.figure(figsize=(12, 8))\n",
     "sns.barplot(x=list(importance_dict.values()), y=list(importance_dict.keys()), palette=colors)\n",
     "plt.title('Feature Importance')\n",
