--- a/llm-rca/llm-ml-rca.ipynb
+++ b/llm-rca/llm-ml-rca.ipynb
@@ -7,7 +7,7 @@
     "# LLM with RCA after anomaly detection using RAG<br>\n",
     "## Project Overview<br>\n",
     "Author: Sedat Kaymaz<br>\n",
-    "This project aims to provide a root cause analsys method by using LLM with RAG based on a system log file <br>\n",
+    "This project aims to provide a root cause analsys method by using LLM with Dynamic RAG based on a system log file <br>\n",
     "for reference after applying anomaly detection ML method to the basic telecom metric list   <br>"
    ]
   },
