--- a/llm-rca/llm-ml-rca.ipynb
+++ b/llm-rca/llm-ml-rca.ipynb
@@ -41,6 +41,7 @@
     "import os,sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import faiss\n",
     "from sklearn.ensemble import IsolationForest\n",
     "from dotenv import load_dotenv\n",
     "from langchain_openai import ChatOpenAI\n",
