--- a/llm-rca/maas-rca.ipynb
+++ b/llm-rca/maas-rca.ipynb
@@ -9,7 +9,8 @@
     "Author:  Sedat Kaymaz & Fatih E. NAR <br>\n",
     "Update: Adding support of Model as a Service BackEnd. Ref: https://maas.apps.prod.rhoai.rh-aiservices-bu.com/<br> \n",
     "This project aims to provide a root cause analsys method by using LLM with Dynamic RAG based on a system log file <br>\n",
-    "for reference after applying anomaly detection ML method to the basic telecom metric list   <br>"
+    "for reference after applying anomaly detection ML method to the basic telecom metric list.   <br>\n",
+    "Please NOTE: As MaaS does not offer embedding service the correlation between metric anomaly and log datameshing can be poor."
    ]
   },
   {
