--- a/llm-rca/maas-rca.ipynb
+++ b/llm-rca/maas-rca.ipynb
@@ -10,7 +10,7 @@
     "Update: Adding support of Model as a Service BackEnd. Ref: https://maas.apps.prod.rhoai.rh-aiservices-bu.com/<br> \n",
     "This project aims to provide a root cause analsys method by using LLM with Dynamic RAG based on a system log file <br>\n",
     "for reference after applying anomaly detection ML method to the basic telecom metric list.   <br>\n",
-    "Please NOTE: As MaaS does not offer embedding service the correlation between metric anomaly and log datameshing can be poor."
+    "Please NOTE: As MaaS does not offer embedding generation service (yet) the correlation between metric anomaly and log datameshing can be poor."
    ]
   },
   {
