--- a/starlink/starlink_model.ipynb
+++ b/starlink/starlink_model.ipynb
@@ -14,12 +14,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r requirements.txt"
+    "#%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "            num_layers=2\n",
     "        )\n",
     "        self.fc = nn.Linear(input_dim, 1)\n",
-    "        \n",
+    "\n",
     "    def forward(self, x):\n",
     "        x = self.transformer(x)\n",
     "        x = torch.mean(x, dim=1)\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,15 +92,50 @@
     "train_dataset = TensorDataset(X_train, y_train)\n",
     "test_dataset = TensorDataset(X_test, y_test)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=32)"
+    "train_loader = DataLoader(train_dataset, batch_size=128, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=128)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/app-root/lib64/python3.11/site-packages/torch/nn/modules/transformer.py:307: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10, Test Loss: 0.2680\n",
+      "Epoch 20, Test Loss: 0.1621\n",
+      "Epoch 30, Test Loss: 0.1255\n",
+      "Epoch 40, Test Loss: 0.1554\n",
+      "Epoch 50, Test Loss: 0.0680\n",
+      "Epoch 60, Test Loss: 0.0669\n",
+      "Epoch 70, Test Loss: 0.0669\n",
+      "Epoch 80, Test Loss: 0.0574\n",
+      "Epoch 90, Test Loss: 0.1041\n",
+      "Epoch 100, Test Loss: 0.0582\n",
+      "Epoch 110, Test Loss: 0.0644\n",
+      "Epoch 120, Test Loss: 0.1123\n",
+      "Epoch 130, Test Loss: 0.0619\n",
+      "Epoch 140, Test Loss: 0.0601\n",
+      "Epoch 150, Test Loss: 0.1175\n",
+      "Epoch 160, Test Loss: 0.0641\n",
+      "Epoch 170, Test Loss: 0.0534\n",
+      "Epoch 180, Test Loss: 0.0643\n",
+      "Epoch 190, Test Loss: 0.0623\n",
+      "Epoch 200, Test Loss: 0.0603\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize accelerator\n",
     "accelerator = Accelerator()\n",
@@ -116,7 +151,7 @@
     ")\n",
     "\n",
     "# Training loop\n",
-    "num_epochs = 100\n",
+    "num_epochs = 200\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -139,9 +174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['models/label_encoders.joblib']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Save model and preprocessing\n",
     "accelerator.wait_for_everyone()\n",
@@ -153,9 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Final R² Score: 0.999\n"
+     ]
+    }
+   ],
    "source": [
     "# Final evaluation\n",
     "model.eval()\n",
@@ -181,7 +236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -195,9 +250,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
