--- a/starlink/starlink_model.ipynb
+++ b/starlink/starlink_model.ipynb
@@ -14,12 +14,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install -r requirements.txt"
+    "%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,44 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/app-root/lib64/python3.11/site-packages/torch/nn/modules/transformer.py:307: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
-      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10, Test Loss: 0.2680\n",
-      "Epoch 20, Test Loss: 0.1621\n",
-      "Epoch 30, Test Loss: 0.1255\n",
-      "Epoch 40, Test Loss: 0.1554\n",
-      "Epoch 50, Test Loss: 0.0680\n",
-      "Epoch 60, Test Loss: 0.0669\n",
-      "Epoch 70, Test Loss: 0.0669\n",
-      "Epoch 80, Test Loss: 0.0574\n",
-      "Epoch 90, Test Loss: 0.1041\n",
-      "Epoch 100, Test Loss: 0.0582\n",
-      "Epoch 110, Test Loss: 0.0644\n",
-      "Epoch 120, Test Loss: 0.1123\n",
-      "Epoch 130, Test Loss: 0.0619\n",
-      "Epoch 140, Test Loss: 0.0601\n",
-      "Epoch 150, Test Loss: 0.1175\n",
-      "Epoch 160, Test Loss: 0.0641\n",
-      "Epoch 170, Test Loss: 0.0534\n",
-      "Epoch 180, Test Loss: 0.0643\n",
-      "Epoch 190, Test Loss: 0.0623\n",
-      "Epoch 200, Test Loss: 0.0603\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize accelerator\n",
     "accelerator = Accelerator()\n",
@@ -174,20 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['models/label_encoders.joblib']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save model and preprocessing\n",
     "accelerator.wait_for_everyone()\n",
@@ -199,18 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Final R² Score: 0.999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Final evaluation\n",
     "model.eval()\n",
