--- a/starlink/starlink_model.ipynb
+++ b/starlink/starlink_model.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r requirements.txt"
+    "#%pip install -r requirements.txt"
    ]
   },
   {
@@ -69,6 +69,12 @@
     "# Data preparation\n",
     "df = pd.read_csv('data/starlink_data.csv')\n",
     "\n",
+    "# Display basic information about the dataset\n",
+    "df.info()\n",
+    "\n",
+    "# Display the first few rows of the dataset\n",
+    "df.head()\n",
+    "\n",
     "label_encoders = {}\n",
     "for cat_feat in ['season', 'weather']:\n",
     "    label_encoders[cat_feat] = LabelEncoder()\n",
@@ -90,10 +96,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(X_tensor, y_tensor, test_size=0.2, random_state=42)\n",
     "\n",
     "train_dataset = TensorDataset(X_train, y_train)\n",
-    "test_dataset = TensorDataset(X_test, y_test)\n",
-    "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=128, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=128)"
+    "test_dataset = TensorDataset(X_test, y_test)"
    ]
   },
   {
@@ -110,13 +113,17 @@
     "criterion = nn.MSELoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
+    "# Training Variables\n",
+    "num_epochs = 200\n",
+    "batch_size = 128\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size)\n",
+    "\n",
     "# Prepare for accelerated training\n",
     "model, optimizer, train_loader, test_loader = accelerator.prepare(\n",
     "    model, optimizer, train_loader, test_loader\n",
     ")\n",
-    "\n",
-    "# Training loop\n",
-    "num_epochs = 200\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -126,7 +133,7 @@
     "        loss = criterion(outputs, batch_y)\n",
     "        accelerator.backward(loss)\n",
     "        optimizer.step()\n",
-    "    \n",
+    "\n",
     "    if (epoch + 1) % 10 == 0:\n",
     "        model.eval()\n",
     "        test_loss = 0\n",
