--- a/starlink/starlink_model.ipynb
+++ b/starlink/starlink_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Startlink Performance Monitoring with AI\n",
+    "# Starlink SATCOM ISP Performance Monitoring with AI\n",
     "## Author: Fatih E. NAR"
    ]
   },
